# projeto-integrador-ia

./: Diagrama sem nome.drawio  README.md  captura_envio.py  config.py  llm.py  main.py  pyproject.toml  requirements.txt  rpa.py  test-rpa.py  test_playwright.py  teste.py
rpa/: brb.py  enums.py
rpa-auto-fixer/: core.py  error_handler.py  llm_handler.py
rpa_auto_fixer/: core.py  error_handler.py  llm_handler.py
tests/: test_error_handler.py  test_llm_handler.py  test_verify_code_integrity.py
utils/: __init__.py  exec_in_subprocess.py  format_traceback.py  get_current_file_content.py  verify_code_integrity.py
